--- a/configs/reverse_corrector.yaml
+++ b/configs/reverse_corrector.yaml
@@ -30,7 +30,7 @@ training:
     normalization: batch
     normalize_corrector: False
     clip_grad_norm: 1.0
-    batch_size: 10
+    batch_size: 11
     scheduling: "plateau"
     patience: 5
     decrease_factor: 0.5
@@ -46,7 +46,8 @@ training:
     max_output_length: 30
     print_valid_sents: 3
    # load_model: "reverse_bahdanau_correct/1000.ckpt"
-    loss_weights: {"mt": 0., "corrector": 1.0}
+    loss_weights: {"mt": 1., "corrector": 1.}
+    pos_weight: 0.8  # >1 increases the recall, <1 increases the precision.
 
 model:
     simulated_marking_function: accuracy # recall, lcs, accuracy
@@ -83,10 +84,10 @@ model:
         freeze: False
     corrector:
         type: "lstm"
-        hidden_size: 34
+        hidden_size: 64
         num_layers: 1
-        bidirectional: False
+        bidirectional: True
         attention: "bahdanau"
-        reward_coeff: 100
+        reward_coeff: 5
         shift_rewards: False
         freeze: False
