--- a/configs/reverse_regulated.yaml
+++ b/configs/reverse_regulated.yaml
@@ -24,21 +24,21 @@ training:
     optimizer: "adam"
     loss: "crossentropy"
     learning_rate: {"mt": 0.001, "regulator": 0.0001}
-    learning_rate_min: 0.0002
+    learning_rate_min: 0.00002
 #    clip_grad_val: 1.0
     weight_decay: 0.0
     clip_grad_norm: 1.0
     batch_size: 10
     valid_batch_size: 10
     scheduling: "plateau"
-    patience: 1
+    patience: 8
     decrease_factor: 0.5
     schedule_after_loss: True
     epochs: 10
-    validation_freq: 1
+    validation_freq: 20
     logging_freq: 10
     eval_metric: "bleu"
-    model_dir: "reverse_regulated_load"
+    model_dir: "reverse_regulated_load_only_random"
     overwrite: True
     shuffle: True
     use_cuda: False
@@ -47,9 +47,11 @@ training:
     loss_weights: {"mt": 1.0, "regulator": 1.0}
     load_model: "reverse_regulated/400.ckpt"
     baseline: True  # baseline reward
-    entropy_regularizer: 15  # encourage exploration
-    budget: 10
+    entropy_regularizer: 0  # encourage exploration
+    budget: 50
     cost_weight: 0.9
+    budgeted_cost: False
+    only_sup: "random"
 
 model:
     initializer: "xavier"
