--- a/configs/reverse_regulated.yaml
+++ b/configs/reverse_regulated.yaml
@@ -23,7 +23,7 @@ training:
     random_seed: 42
     optimizer: "adam"
     loss: "crossentropy"
-    learning_rate: {"mt": 0.001, "regulator": 0.0001}
+    learning_rate: {"mt": 0.0001, "regulator": 0.003}
     learning_rate_min: 0.00002
 #    clip_grad_val: 1.0
     weight_decay: 0.0
@@ -31,14 +31,14 @@ training:
     batch_size: 10
     valid_batch_size: 10
     scheduling: "plateau"
-    patience: 8
+    patience: 1
     decrease_factor: 0.5
     schedule_after_loss: True
     epochs: 10
     validation_freq: 20
     logging_freq: 10
     eval_metric: "bleu"
-    model_dir: "reverse_regulated_load_only_random"
+    model_dir: "reverse_regulated_load"
     overwrite: True
     shuffle: True
     use_cuda: False
@@ -51,7 +51,8 @@ training:
     budget: 50
     cost_weight: 0.9
     budgeted_cost: False
-    only_sup: "random"
+    only_sup: 2
+    chunk_type: "sbleu"  # marking
 
 model:
     initializer: "xavier"
