--- a/configs/reverse_regulated.yaml
+++ b/configs/reverse_regulated.yaml
@@ -24,9 +24,11 @@ training:
     optimizer: "adam"
     loss: "crossentropy"
     learning_rate: {"mt": 0.0001, "regulator": 0.003}
+   # learning_rate: 0.0001
     learning_rate_min: 0.00002
 #    clip_grad_val: 1.0
     weight_decay: 0.0
+    normalization: "batch"  # "tokens"
     clip_grad_norm: 1.0
     batch_size: 10
     valid_batch_size: 10
@@ -35,23 +37,23 @@ training:
     decrease_factor: 0.5
     schedule_after_loss: True
     epochs: 10
-    validation_freq: 20
-    logging_freq: 10
+    validation_freq: 1000
+    logging_freq: 100
     eval_metric: "bleu"
-    model_dir: "reverse_regulated_load"
+    model_dir: "reverse_regulated_load_src"
     overwrite: True
     shuffle: True
     use_cuda: False
     max_output_length: 11
     print_valid_sents: 3
     loss_weights: {"mt": 1.0, "regulator": 1.0}
-    load_model: "reverse_regulated/400.ckpt"
+    #load_model: "reverse_regulated_src/4000.ckpt"
     baseline: True  # baseline reward
     entropy_regularizer: 0  # encourage exploration
     budget: 50
     cost_weight: 0.9
     budgeted_cost: False
-    only_sup: 2
+    only_sup: False
     chunk_type: "sbleu"  # marking
     self_entropy: False # encourage high entropy for self-training
 
