--- a/configs/reverse_regulated.yaml
+++ b/configs/reverse_regulated.yaml
@@ -30,7 +30,7 @@ training:
     weight_decay: 0.0
     normalization: "batch"  # "tokens"
     clip_grad_norm: 1.0
-    batch_size: 50
+    batch_size: 10
     valid_batch_size: 10
     scheduling: "plateau"
     patience: 1
@@ -47,17 +47,18 @@ training:
     max_output_length: 11
     print_valid_sents: 3
     loss_weights: {"mt": 1.0, "regulator": 1.0}
-    #load_model: "reverse_regulated_src/4000.ckpt"
-    baseline: True  # baseline reward for regulator
+   # load_model: "reverse_regulated_weak_sample/10.ckpt"
+    baseline: "window"  # mean, first, previous, False  # baseline reward for regulator
     weak_baseline: True
     search: "beam"
     entropy_regularizer: 0  # encourage exploration
     budget: 5000
     cost_weight: 0.9
     budgeted_cost: False
-    only_sup: 2
+    only_sup: False
     chunk_type: "sbleu"  # marking
     self_entropy: False # encourage high entropy for self-training
+    weak_baseline: True
 
 model:
     initializer: "xavier"
@@ -93,6 +94,7 @@ model:
             embedding_dim: 16
             scale: False
         hidden_size: 64
+        middle_size: 32
         dropout: 0.1
         output_size: 4
         num_layers: 2
