--- a/configs/default_pe.yaml
+++ b/configs/default_pe.yaml
@@ -38,7 +38,7 @@ training: # specify training details here
     epochs: 1  # train for this many epochs
     validation_freq: 50  # validate after this many updates (number of mini-batches), default: 1000
     logging_freq: 10  # log the training progress after this many updates, default: 100
-    eval_metric: "bleu" # validation metric, default: "bleu", other options: "chrf", "token_accuracy", "sequence_accuracy"
+    eval_metric: "ter" # validation metric, default: "bleu", other options: "chrf", "token_accuracy", "sequence_accuracy", "ter"
     ckpt_metric: "eval_metric"  # when a new high score on this metric is achieved, a checkpoint is written, when "eval_metric" (default) is maximized, when "loss" or "ppl" is minimized
     model_dir: "my_model" # directory where models and validation results are stored, required
     overwrite: True # overwrite existing model directory, default: False. Do not set to True unless for debugging!
