--- a/configs/reverse_regulated.yaml
+++ b/configs/reverse_regulated.yaml
@@ -48,18 +48,19 @@ training:
     print_valid_sents: 3
     loss_weights: {"mt": 1.0, "regulator": 1.0}
     load_model: "reverse/1000.ckpt"
-    baseline: "window"  # mean, first, previous, False  # baseline reward for regulator
+    baseline: "first"  # mean, first, previous, False  # baseline reward for regulator
     weak_baseline: True
     search: "beam"
-    entropy_regularizer: 0  # encourage exploration
+    entropy_regularizer: 0.1  # encourage exploration
     budget: 5000
     cost_weight: 0.9
     budgeted_cost: False
-    only_sup: False
+    only_sup: 1
     chunk_type: "sbleu"  # marking
     self_entropy: False # encourage high entropy for self-training
     weak_baseline: True
     init_from_mt: True
+    self_attention_drop: 0.9
 
 model:
     initializer: "xavier"
@@ -97,7 +98,7 @@ model:
         hidden_size: 63
         middle_size: 31
         dropout: 0.1
-        output_labels: ["weak", "full"]
+        output_labels: ["none", "self", "weak", "full"]
         #["none", "self", "weak", "full"]
         num_layers: 2
         bidirectional: True
