--- a/configs/reverse_regulated.yaml
+++ b/configs/reverse_regulated.yaml
@@ -55,12 +55,14 @@ training:
     budget: 5000
     cost_weight: 0.9
     budgeted_cost: False
-    only_sup: "full"
+    only_sup: "epsilon"
     chunk_type: "sbleu"  # marking
     self_entropy: False # encourage high entropy for self-training
     weak_baseline: True
     init_from_mt: True
     self_attention_drop: 0.9
+    pe_ratio: 0.5
+    epsilon: 0.5
 
 model:
     initializer: "xavier"
