--- a/configs/reverse_regulated.yaml
+++ b/configs/reverse_regulated.yaml
@@ -52,18 +52,19 @@ training:
     baseline: "first"  # mean, first, previous, False  # baseline reward for regulator
     weak_baseline: True
     weak_search: "offline"
-    entropy_regularizer: 0.1  # encourage exploration
+    entropy_regularizer: 0.0  # encourage exploration
     budget: 5000
     cost_weight: 0.9
     budgeted_cost: False
     only_sup: "epsilon"
     chunk_type: "sbleu"  # marking
     self_entropy: False # encourage high entropy for self-training
-    weak_baseline: True
+    weak_baseline: False
     init_from_mt: True
     self_attention_drop: 0.9
     pe_ratio: 0.5
     epsilon: 0.5
+    weighted_reward: True
 
 model:
     initializer: "xavier"
