--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -30,6 +30,7 @@ training: # specify training details here
     #clip_grad_norm: 1.0  # norm clipping instead of value clipping
     weight_decay: 0.1 # l2 regularization, default: 0
     batch_size: 10  # mini-batch size, required
+    bucket_size: 100  # number of mini-batches that are sorted within one bucket to reduce the amount of padding. Smaller numbers lead to more padding, larger numbers to more uniformly-sized batches but to a less random order.
     batch_multiplier: 1 # increase the effective batch size with values >1 to batch_multiplier*batch_size without increasing memory consumption by making updates only every batch_multiplier batches
     scheduling: "plateau" # learning rate scheduling, optional, if not specified stays constant, options: "plateau", "exponential", "decaying"
     patience: 5 # specific to plateau scheduler: wait for this many validations without improvement before decreasing the learning rate
